# hrrecycler_component_sorting

./: .gitmodules  README.md
component_sorting/: CMakeLists.txt  package.xml
component_sorting/config/: component_sorting.yaml  objects_config.yaml  poses_config.yaml
component_sorting/include/component_sorting/: component_sorting.h  component_sorting_cartesian.h  object.h  object_builder.h  pose.h  pose_builder.h
component_sorting/launch/: component_sorting.launch  component_sorting_cartesian.launch  component_sorting_with_ns.launch  publish_collision.launch
component_sorting/src/: component_sorting (copy).cpp  component_sorting.cpp  component_sorting.cpp.prepickalmacenado  component_sorting_cartesian.cpp  component_sorting_cartesian_node.cpp  component_sorting_node.cpp  object.cpp  object_builder.cpp  pose.cpp  pose_builder.cpp  publish_collision_object.cpp
component_sorting_bringup/: CMakeLists.txt  package.xml
component_sorting_bringup/launch/: component_sorting_bringup.launch  component_sorting_simulation_bringup.launch  transforms.launch
component_sorting_bringup/maps/: map_empty.yaml
component_sorting_description/: CMakeLists.txt  package.xml
component_sorting_description/ar_tags/: ar_tag.urdf.xacro  ar_tag_12cm_border.urdf.xacro  ar_tag_6cm_border.urdf.xacro  ar_tag_border.urdf.xacro  marker1_border_12cm.urdf.xacro  marker2_border_12cm.urdf.xacro  marker3_border_12cm.urdf.xacro  marker4_border_12cm.urdf.xacro
component_sorting_description/config/: layout.yaml
component_sorting_description/launch/: component_sorting_state_robot.launch
component_sorting_description/meshes/: crate.stl  embedded_s_support.dae
component_sorting_description/robots/: component_sorting.urdf.xacro  rbkairos_ur5_plus.urdf.xacro
component_sorting_description/urdf/: crate.urdf.xacro  package.urdf.xacro  table.urdf.xacro
component_sorting_manipulation/: CMakeLists.txt  package.xml
component_sorting_manipulation/config/: objects_config.yaml  robot_config.yaml
component_sorting_manipulation/launch/: manipulation_app.launch
component_sorting_manipulation/src/: manipulation_app.cpp  manipulation_app_node.cpp
component_sorting_moveit_config/: .gitignore  .setup_assistant  CMakeLists.txt  package.xml
component_sorting_moveit_config/config/: .component_sorting.srdf.swp  component_sorting.srdf  controllers.yaml  controllers_simulation.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  sensors_kinect_depthmap.yaml  sensors_kinect_pointcloud.yaml
component_sorting_moveit_config/launch/: chomp_planning_pipeline.launch.xml  component_sorting_moveit_config.launch  component_sorting_moveit_config_with_ns.launch  component_sorting_moveit_controller_manager.launch.xml  create_constraints.launch  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  rtabmap.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  warehouse.launch
component_sorting_moveit_config/scripts/: generate_path_constraints.cpp  plan_traj_prueba.py
component_sorting_msgs/: CMakeLists.txt  package.xml
component_sorting_msgs/action/: InitHolder.action  MoveToPose.action  PickObject.action  PickupFrom.action  PlaceObject.action  PlaceOn.action  SpawnTable.srv
component_sorting_msgs/srv/: SetConstraint.srv
component_sorting_simple_sim/: CMakeLists.txt  package.xml
component_sorting_simple_sim/launch/: box_spawner.launch  box_table.launch  boxes.launch  boxes_table.launch  simulation.launch  table.launch
component_sorting_simple_sim/src/: box_spawner.cpp
component_sorting_simple_sim/world/: ros_dev.world
debs/: ros-melodic-image-filter_0.0.0-0bionic_amd64.deb  ros-melodic-rcomponent_1.1.0-0bionic_amd64.deb  ros-melodic-robotnik-docker_1.0.0-0bionic_amd64.deb  ros-melodic-robotnik-locator_1.0.1-0bionic_amd64.deb  ros-melodic-robotnik-move_1.0.0-0bionic_amd64.deb  ros-melodic-robotnik-msgs_1.1.0-0bionic_amd64.deb  ros-melodic-robotnik-navigation-msgs_0.0.0-0bionic_amd64.deb  ros-melodic-robotnik-pose-filter_1.0.0-0bionic_amd64.deb
hrrecycler_component_sorting_description/: CMakeLists.txt  package.xml
hrrecycler_component_sorting_description/launch/: hrrecycler_component_sorting_state_robot.launch
hrrecycler_component_sorting_description/robots/: hrrecycler_component_sorting.urdf.xacro
hrrecycler_component_sorting_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
hrrecycler_component_sorting_moveit_config/config/: hrrecycler_component_sorting.srdf
hrrecycler_component_sorting_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  hrrecycler_component_sorting_moveit_config.launch  hrrecycler_component_sorting_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  (+3 more)
(+36 files in other folders)
