<?xml version="1.0"?>
<package format="2">
  <name>component_sorting</name>
  <version>0.0.0</version>
  <description>The component_sorting package</description>

  <maintainer email="mbosch@robotnik.es">Marc Bosch-Jorge</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>rcomponent</depend>
  <depend>roscpp</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
